# dvc-sample

./: dvc.yaml  pyproject.toml
data/: .gitignore  data.xml.dvc
src/: evaluate.py  prepare.py
tests/: test_dvc_sample.py
