[tool.poetry]
name = "dvc-sample"
version = "0.1.0"
description = ""
authors = ["Nonaka Kenya <k.nonaka@opt.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
